ENGR00222170: Add mx6sl_evk_android_config for mx6sl evk board
- add CONFIG_MACH_MX6SL_EVK to imx6s_android_defconfig

Signed-off-by: Jack Lee <jacklee@freescale.com>

--- a/arch/arm/configs/imx6s_android_defconfig
+++ b/arch/arm/configs/imx6s_android_defconfig
@@ -329,6 +329,7 @@ CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
 CONFIG_MACH_MX6Q_ARM2=y
 CONFIG_MACH_MX6SL_ARM2=y
+CONFIG_MACH_MX6SL_EVK=y
 # CONFIG_MACH_MX6Q_SABRELITE is not set
 CONFIG_MACH_MX6Q_SABRESD=y
 # CONFIG_MACH_MX6Q_SABREAUTO is not set
