nitrogen53k_defconfig: enable isl1208 rtc, disable da9052 rtc

--- a/arch/arm/configs/nitrogen53k_defconfig
+++ b/arch/arm/configs/nitrogen53k_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Fri May 18 13:16:33 2012
+# Wed Oct 31 14:10:16 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -898,6 +898,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_I2C is not set
 # CONFIG_TOUCHSCREEN_EP0700M01 is not set
+# CONFIG_TOUCHSCREEN_FT5X06 is not set
 CONFIG_TOUCHSCREEN_EKTF2K=y
 # CONFIG_TOUCHSCREEN_EKTF2K_SINGLE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
@@ -1778,7 +1779,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 # CONFIG_RTC_DRV_DS1672 is not set
 # CONFIG_RTC_DRV_MAX6900 is not set
 # CONFIG_RTC_DRV_RS5C372 is not set
-# CONFIG_RTC_DRV_ISL1208 is not set
+CONFIG_RTC_DRV_ISL1208=y
 # CONFIG_RTC_DRV_X1205 is not set
 # CONFIG_RTC_DRV_PCF8563 is not set
 # CONFIG_RTC_DRV_PCF8583 is not set
@@ -1805,7 +1806,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 # Platform RTC drivers
 #
 # CONFIG_RTC_DRV_CMOS is not set
-CONFIG_RTC_DRV_DA9052=y
+# CONFIG_RTC_DRV_DA9052 is not set
 # CONFIG_RTC_DRV_DS1286 is not set
 # CONFIG_RTC_DRV_DS1511 is not set
 # CONFIG_RTC_DRV_DS1553 is not set
