mfd: arizona: Initial support for WM8285/WM1840
The WM8285 is a highly-integrated low-power audio and sensor hub system
for smartphones, tablets and other portable audio devices.

Change-Id: Iec57dbbfc3d5b6e0bb367f4f55e32d36d6658363
Signed-off-by: Nariman Poushin <nariman@opensource.wolfsonmicro.com>
Signed-off-by: Charles Keepax <ckeepax@opensource.wolfsonmicro.com>

--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -49,6 +49,9 @@ endif
 ifneq ($(CONFIG_MFD_WM8998),n)
 obj-$(CONFIG_MFD_ARIZONA)	+= wm8998-tables.o
 endif
+ifneq ($(CONFIG_MFD_WM8285),n)
+obj-$(CONFIG_MFD_ARIZONA)	+= wm8285-tables.o
+endif
 ifneq ($(CONFIG_MFD_CS47L24),n)
 obj-$(CONFIG_MFD_ARIZONA)	+= cs47l24-tables.o
 endif
