--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -1056,6 +1056,12 @@ config MFD_WM8997
 	help
 	  Support for Wolfson Microelectronics WM8997 low power audio SoC
 
+config MFD_WM8285
+	bool "Wolfson Microelectronics WM8285"
+	depends on MFD_ARIZONA
+	help
+	  Support for Wolfson Microelectronics WM8285 low power audio SoC
+
 config MFD_CS47L24
 	bool "Cirrus Logic CS47L24"
 	depends on MFD_ARIZONA
