--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -84,6 +84,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_WM5100 if I2C
 	select SND_SOC_WM5102 if MFD_WM5102
 	select SND_SOC_FLORIDA if MFD_FLORIDA
+	select SND_SOC_WM8285 if MFD_WM8285
 	select SND_SOC_WM8350 if MFD_WM8350
 	select SND_SOC_WM8400 if MFD_WM8400
 	select SND_SOC_WM8510 if SND_SOC_I2C_AND_SPI
@@ -146,11 +147,13 @@ config SND_SOC_ARIZONA
 	tristate
 	default y if SND_SOC_WM5102=y
 	default y if SND_SOC_FLORIDA=y
+	default y if SND_SOC_WM8285=y
 	default y if SND_SOC_WM8997=y
 	default y if SND_SOC_WM8998=y
 	default y if SND_SOC_CS47L24=y
 	default m if SND_SOC_WM5102=m
 	default m if SND_SOC_FLORIDA=m
+	default m if SND_SOC_WM8285=m
 	default m if SND_SOC_WM8997=m
 	default m if SND_SOC_WM8998=m
 	default m if SND_SOC_CS47L24=m
@@ -164,10 +167,12 @@ config SND_SOC_WM_ADSP
 	tristate
 	default y if SND_SOC_WM5102=y
 	default y if SND_SOC_FLORIDA=y
+	default y if SND_SOC_WM8285=y
 	default y if SND_SOC_WM2200=y
 	default y if SND_SOC_CS47L24=y
 	default m if SND_SOC_WM5102=m
 	default m if SND_SOC_FLORIDA=m
+	default m if SND_SOC_WM8285=m
 	default m if SND_SOC_WM2200=m
 	default m if SND_SOC_CS47L24=m
 
@@ -395,6 +400,9 @@ config SND_SOC_WM5102
 	tristate
 
 config SND_SOC_FLORIDA
+	tristate
+
+config SND_SOC_WM8285
 	tristate
 
 config SND_SOC_WM8350
