mcs: enable console rotation
Signed-off-by: Eric Nelson <eric.nelson@boundarydevices.com>

--- a/arch/arm/configs/mcs_defconfig
+++ b/arch/arm/configs/mcs_defconfig
@@ -164,6 +164,7 @@ CONFIG_BACKLIGHT_PWM=y
 # CONFIG_FB_MXC_EDID is not set
 CONFIG_FB_MXC_LDB=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x16=y
 CONFIG_LOGO=y
@@ -252,4 +253,3 @@ CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC7=y
 CONFIG_AVERAGE=y
-CONFIG_FHANDLE=y
