mfd: wm8998: fix typo in Makefile command
Build of WM8998 was dependant on itself, it should be
dependant on the core Arizona driver being built.

Change-Id: Id9489bfb75b552be8a380a2f36684a3878edf77f
Signed-off-by: Richard Fitzgerald <rf@opensource.wolfsonmicro.com>

--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -47,7 +47,7 @@ ifneq ($(CONFIG_MFD_WM8997),n)
 obj-$(CONFIG_MFD_ARIZONA)	+= wm8997-tables.o
 endif
 ifneq ($(CONFIG_MFD_WM8998),n)
-obj-$(CONFIG_MFD_WM8998)	+= wm8998-tables.o
+obj-$(CONFIG_MFD_ARIZONA)	+= wm8998-tables.o
 endif
 ifneq ($(CONFIG_MFD_CS47L24),n)
 obj-$(CONFIG_MFD_ARIZONA)	+= cs47l24-tables.o
