--- a/arch/arm/configs/per_defconfig
+++ b/arch/arm/configs/per_defconfig
@@ -181,6 +181,7 @@ CONFIG_NET_ACT_MIRRED=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_MAC80211=y
+CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
@@ -276,6 +277,7 @@ CONFIG_VIDEO_DEV=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_MXC_TVIN_ADV7180=y
 CONFIG_MXC_HDMI_CSI2_TC358743=y
+CONFIG_MXC_VIDEO_GS2971=y
 CONFIG_MXC_IPU_PRP_VF_SDC=y
 CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_GSPCA is not set
@@ -327,7 +329,6 @@ CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
-CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_GPIO=y
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_SLEEP=y
