MA-5824-1 Force power on GPS when startup
Force to power on GPS when boot up system
in case GPS will not work by chance.

Signed-off-by: Wang Haoran <b50027@freescale.com>

--- a/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
@@ -260,8 +260,8 @@
 	};
 
 	gps_ctrl {
-		gps-reset-b = <&gpio2 28 GPIO_ACTIVE_LOW>;
-		power-on-gpio = <&gpio3 0 GPIO_ACTIVE_LOW>;
+		gps-reset-b = <&gpio2 28 GPIO_ACTIVE_HIGH>;
+		power-on-gpio = <&gpio3 0 GPIO_ACTIVE_HIGH>;
 	};
 
 	ramoops_device {
