--- a/drivers/media/platform/mxc/capture/Kconfig
+++ b/drivers/media/platform/mxc/capture/Kconfig
@@ -67,6 +67,12 @@ config MXC_CAMERA_OV5647_MIPI
 	---help---
 	  If you plan to use the ov5647 Camera with mipi interface in your MXC system, say Y here.
 
+config MXC_CAMERA_OV5645_MIPI
+	tristate "OmniVision ov5645 camera support using mipi"
+	depends on !VIDEO_MXC_EMMA_CAMERA && I2C
+	---help---
+	  If you plan to use the ov5645 Camera with mipi interface in your MXC system, say Y here.
+
 config MXC_TVIN_ADV7180
 	tristate "Analog Device adv7180 TV Decoder Input support"
 	depends on !VIDEO_MXC_EMMA_CAMERA && I2C
