--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -488,6 +488,17 @@ config SND_SOC_IMX_CDNHDMI
 	  Say Y if you want to add support for SoC audio on an i.MX board with
 	  IMX CDN HDMI.
 
+config SND_SOC_IMX_TAS5760
+        tristate "SoC Audio support for i.MX boards with tas5760"
+        depends on OF && I2C
+        select SND_SOC_TAS5760
+        select SND_SOC_IMX_PCM_DMA
+        select SND_SOC_FSL_SAI
+        help
+          SoC Audio support for i.MX boards with TAS5760
+          Say Y if you want to add support for SoC audio on an i.MX board with
+          a tas5760 codec.
+
 endif # SND_IMX_SOC
 
 endmenu
