MA-9057-1 enable vndbinder device on android O with 4.9 kernel
Enable vndbinder device else mediacodecservice crash with below log.

2471 I /vendor/bin/hw/android.hardware.media.omx@1.0-service: mediacodecservice starting
2471 W ProcessState: Opening '/dev/vndbinder' failed: No such file or directory
2471 F ProcessState: Binder driver could not be opened.  Terminating.
2471 F libc    : Fatal signal 6 (SIGABRT), code -6 in tid 2471 (android.hardwar)

Change-Id: I2563fb664bbd8f3b130a817568fd4708d9f76f6f
Signed-off-by: Richard Liu <xuegang.liu@nxp.com>

--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -604,6 +604,7 @@ CONFIG_PWM_IMX=y
 CONFIG_PWM_TPM=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES=binder,hwbinder,vndbinder
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
