MA-9797 ADB/MTP function not work on 8qm/8qxp
Remove CONFIG_USB_ETH as udc core only allow one gadget driver
to be bound to one  udc controller.
USB_ETH composition gadget driver will be bound to udc controller
before configfs's driver.

Change-Id: I2844670f96172e7600420d6056bec5091063338e
Singed-off-by: Tian Yang <yang.tian@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -584,8 +584,8 @@ CONFIG_USB_CONFIGFS_F_UAC1=y
 CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_GADGET_UAC1=y
-CONFIG_USB_ETH=y
-CONFIG_USB_ETH_EEM=y
+# CONFIG_USB_ETH is not set
+# CONFIG_USB_ETH_EEM is not set
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_ARMMMCI=y
