--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -68,9 +68,9 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_DEBUG=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPUFREQ_DT=y
@@ -307,6 +307,8 @@ CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_PLUSB=y
 CONFIG_USB_NET_MCS7830=y
+CONFIG_BCMDHD_1363=y
+CONFIG_BCMDHD_PCIE=y
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_EVDEV=y
@@ -395,6 +397,7 @@ CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_IMX8M_THERMAL=y
 CONFIG_IMX_SC_THERMAL=y
+CONFIG_DEVICE_THERMAL=y
 CONFIG_EXYNOS_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_IMX2_WDT=y
@@ -425,7 +428,14 @@ CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
 CONFIG_DRM_IMX_HDMI=y
 CONFIG_DRM_HISI_KIRIN=y
+CONFIG_FB_IMX64=y
+CONFIG_FB_IMX64_DEBUG=y
 CONFIG_FB_ARMCLCD=y
+CONFIG_FB_MXS=y
+CONFIG_FB_MXC_MIPI_DSI_NORTHWEST=y
+CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
+CONFIG_FB_MX8_HDMI=y
+CONFIG_FB_MXC_ADV7535=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
@@ -435,8 +445,10 @@ CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ACM=y
+CONFIG_SND_SOC_IMX_CDNHDMI=y
 CONFIG_SND_SOC_FSL_HIFI4=y
 CONFIG_SND_IMX_SOC=y
+CONFIG_SND_SOC_IMX_WM8960=y
 CONFIG_SND_SOC_IMX_WM8524=y
 CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_WM8962=y
