MA-10055-3 Bring up bluetooth for 8qm
pull up uart pin for 8qm bluetooth,incase
there will be extra data received which
bluetooth stack can not recognize and cause
bluetooth fail to startup.

Signed-off-by: Tian Yang <yang.tian@nxp.com>
Change-Id: I38df3fc1c4c099b315c8f643fba1766a22b87f1b

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-lpddr4-arm2.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-lpddr4-arm2.dts
@@ -313,10 +313,10 @@
 
 		pinctrl_lpuart1: lpuart1grp {
 			fsl,pins = <
-				SC_P_UART1_RX_DMA_UART1_RX		0x06000020
-				SC_P_UART1_TX_DMA_UART1_TX		0x06000020
-				SC_P_UART1_CTS_B_DMA_UART1_CTS_B	0x06000020
-				SC_P_UART1_RTS_B_DMA_UART1_RTS_B	0x06000020
+				SC_P_UART1_RX_DMA_UART1_RX		0x0600002c
+				SC_P_UART1_TX_DMA_UART1_TX		0x0600002c
+				SC_P_UART1_CTS_B_DMA_UART1_CTS_B	0x0600002c
+				SC_P_UART1_RTS_B_DMA_UART1_RTS_B	0x0600002c
 			>;
 		};
 
