--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -1,4 +1,3 @@
-CONFIG_COMPILE_TEST=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -9,7 +8,6 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_TMPFS=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=14
@@ -42,8 +40,8 @@ CONFIG_ARCH_FSL_IMX8QM=y
 CONFIG_ARCH_FSL_IMX8QXP=y
 CONFIG_ARCH_FSL_IMX8MQ=y
 CONFIG_PCI=y
-CONFIG_PCI_IMX6=y
 CONFIG_PCI_IOV=y
+CONFIG_PCI_IMX6=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PCI_HISI=y
 CONFIG_ARM64_VA_BITS_48=y
@@ -193,7 +191,6 @@ CONFIG_NET_EMATCH_U32=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
-CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
@@ -201,8 +198,6 @@ CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_LEDS=y
-CONFIG_BT_L2CAP=y
-CONFIG_BT_SCO=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_BT_HCIUART_ATH3K=y
@@ -217,11 +212,6 @@ CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=y
-CONFIG_BCMDHD_1363=y
-CONFIG_BCMDHD_PCIE=y
-CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/bcm/1CX_BCM4356/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/bcm/1CX_BCM4356/bcmdhd.1CX.cal";
-CONFIG_MACH_IMX_BLUETOOTH_RFKILL=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
@@ -261,7 +251,6 @@ CONFIG_AHCI_CEVA=y
 CONFIG_AHCI_XGENE=y
 CONFIG_AHCI_QORIQ=y
 CONFIG_SATA_SIL24=y
-CONFIG_SATA_RCAR=y
 CONFIG_PATA_PLATFORM=y
 CONFIG_PATA_OF_PLATFORM=y
 CONFIG_MD=y
@@ -277,7 +266,6 @@ CONFIG_TUN=y
 CONFIG_VETH=y
 CONFIG_VIRTIO_NET=y
 CONFIG_AMD_XGBE=y
-CONFIG_NET_XGENE=y
 CONFIG_MACB=y
 CONFIG_HNS_DSAF=y
 CONFIG_HNS_ENET=y
@@ -285,10 +273,10 @@ CONFIG_E1000E=y
 CONFIG_IGB=y
 CONFIG_IGBVF=y
 CONFIG_SKY2=y
-CONFIG_RAVB=y
 CONFIG_SMC91X=y
 CONFIG_SMSC911X=y
 CONFIG_STMMAC_ETH=y
+CONFIG_MDIO_BITBANG=y
 CONFIG_AT803X_PHY=y
 CONFIG_MICREL_PHY=y
 CONFIG_REALTEK_PHY=y
@@ -308,6 +296,8 @@ CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_PLUSB=y
 CONFIG_USB_NET_MCS7830=y
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/bcm/1CX_BCM4356/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/bcm/1CX_BCM4356/bcmdhd.1CX.cal"
 CONFIG_BCMDHD_1363=y
 CONFIG_BCMDHD_PCIE=y
 # CONFIG_WLAN_VENDOR_TI is not set
@@ -327,11 +317,9 @@ CONFIG_TABLET_USB_GTCO=y
 CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_PM8941_PWRKEY=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
-CONFIG_INPUT_HISI_POWERKEY=y
 CONFIG_INPUT_MPL3115=y
 CONFIG_INPUT_ISL29023=y
 # CONFIG_SERIO_SERPORT is not set
@@ -342,44 +330,31 @@ CONFIG_SERIO_AMBAKMI=y
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_8250_DW=y
-CONFIG_SERIAL_8250_UNIPHIER=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
 CONFIG_SERIAL_IMX_CONSOLE=y
-CONFIG_SERIAL_SH_SCI=y
-CONFIG_SERIAL_SH_SCI_NR_UARTS=11
-CONFIG_SERIAL_SH_SCI_CONSOLE=y
 CONFIG_SERIAL_XILINX_PS_UART=y
 CONFIG_SERIAL_XILINX_PS_UART_CONSOLE=y
 CONFIG_SERIAL_FSL_LPUART=y
 CONFIG_SERIAL_FSL_LPUART_CONSOLE=y
-CONFIG_SERIAL_MVEBU_UART=y
 CONFIG_VIRTIO_CONSOLE=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_IMX_LPI2C=y
-CONFIG_I2C_MESON=y
-CONFIG_I2C_UNIPHIER_F=y
-CONFIG_I2C_RCAR=y
 CONFIG_I2C_CROS_EC_TUNNEL=y
+CONFIG_I2C_SLAVE=y
 CONFIG_SPI=y
-CONFIG_SPI_MESON_SPIFC=y
-CONFIG_SPI_ORION=y
 CONFIG_SPI_PL022=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_MAX77620=y
-CONFIG_PINCTRL_MSM8916=y
-CONFIG_PINCTRL_MSM8996=y
-CONFIG_PINCTRL_QDF2XXX=y
-CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
+CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_DWAPB=y
 CONFIG_GPIO_PL061=y
-CONFIG_GPIO_RCAR=y
 CONFIG_GPIO_XGENE=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
@@ -398,20 +373,15 @@ CONFIG_THERMAL_EMULATION=y
 CONFIG_IMX8M_THERMAL=y
 CONFIG_IMX_SC_THERMAL=y
 CONFIG_DEVICE_THERMAL=y
-CONFIG_EXYNOS_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_IMX2_WDT=y
-CONFIG_RENESAS_WDT=y
 CONFIG_MFD_CROS_EC=y
 CONFIG_MFD_CROS_EC_I2C=y
-CONFIG_MFD_HI655X_PMIC=y
 CONFIG_MFD_MAX77620=y
-CONFIG_MFD_SPMI_PMIC=y
 CONFIG_MFD_SEC_CORE=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_GPIO=y
-CONFIG_REGULATOR_HI655X=y
 CONFIG_REGULATOR_MAX77620=y
 CONFIG_REGULATOR_PFUZE100=y
 CONFIG_REGULATOR_PWM=y
@@ -443,8 +413,8 @@ CONFIG_FB_MXC_MIPI_DSI_NORTHWEST=y
 CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
 CONFIG_FB_MX8_HDMI=y
 CONFIG_FB_MXC_ADV7535=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_BACKLIGHT_LP855X=y
+CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
@@ -453,7 +423,6 @@ CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ACM=y
-CONFIG_SND_SOC_IMX_CDNHDMI=y
 CONFIG_SND_SOC_FSL_HIFI4=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_WM8960=y
@@ -462,6 +431,7 @@ CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_WM8962=y
 CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
+CONFIG_SND_SOC_IMX_CDNHDMI=y
 CONFIG_SND_SOC_AK4613=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
@@ -529,7 +499,6 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
-CONFIG_USB_RENESAS_USBHS=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC2=y
@@ -549,7 +518,6 @@ CONFIG_USB_GPIO_VBUS=y
 CONFIG_USB_MXS_PHY=y
 CONFIG_USB_ULPI=y
 CONFIG_USB_GADGET=y
-CONFIG_USB_RENESAS_USBHS_UDC=y
 CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_SERIAL=y
 CONFIG_USB_CONFIGFS_ACM=y
@@ -580,7 +548,6 @@ CONFIG_MMC_SDHCI_ACPI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_MMC_SPI=y
-CONFIG_MMC_SDHI=y
 CONFIG_MXC_GPU_VIV=y
 CONFIG_GPU_LOW_MEMORY_KILLER=y
 CONFIG_MXC_MLB150=y
@@ -594,12 +561,9 @@ CONFIG_RTC_DRV_MAX77686=y
 CONFIG_RTC_DRV_S5M=y
 CONFIG_RTC_DRV_DS3232=y
 CONFIG_RTC_DRV_EFI=y
-CONFIG_RTC_DRV_S3C=y
 CONFIG_RTC_DRV_PL031=y
-CONFIG_RTC_DRV_TEGRA=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_RTC_DRV_IMX_SC=y
-CONFIG_RTC_DRV_XGENE=y
 CONFIG_DMADEVICES=y
 CONFIG_FSL_EDMA_V3=y
 CONFIG_IMX_SDMA=y
@@ -607,7 +571,6 @@ CONFIG_MXS_DMA=y
 CONFIG_PL330_DMA=y
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
-CONFIG_RCAR_DMAC=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
@@ -622,26 +585,21 @@ CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 CONFIG_COMMON_CLK_S2MPS11=y
 CONFIG_CLK_QORIQ=y
-CONFIG_COMMON_CLK_QCOM=y
-CONFIG_MSM_GCC_8916=y
-CONFIG_MSM_MMCC_8996=y
 CONFIG_MAILBOX=y
 CONFIG_ARM_MHU=y
 CONFIG_ARM_SMMU=y
 CONFIG_ARCH_MXC_ARM64=y
 CONFIG_EXTCON_PTN5150=y
 CONFIG_IIO=y
-CONFIG_EXYNOS_ADC=y
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
-CONFIG_PHY_HI6220_USB=y
 CONFIG_PHY_XGENE=y
 CONFIG_IMX8_DDR_PERF=y
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_NVMEM=y
 CONFIG_NVMEM_IMX_OCOTP=y
 CONFIG_NVMEM_IMX_SCU_OCOTP=y
-CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_ACPI=y
 CONFIG_EXT3_FS=y
@@ -658,6 +616,7 @@ CONFIG_CUSE=y
 CONFIG_OVERLAY_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_TMPFS=y
 CONFIG_HUGETLBFS=y
 CONFIG_UBIFS_FS=y
 CONFIG_SQUASHFS=y
@@ -667,7 +626,6 @@ CONFIG_PSTORE_RAM=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_KVM=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_LOCKUP_DETECTOR=y
 CONFIG_PANIC_TIMEOUT=5
@@ -675,7 +633,6 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_FTRACE=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_MEMTEST=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
