MA-10304 [Android] pass vts case KernelProcFileApiTest
android need node /proc/uid_cputime/show_uid_stat and
/proc/uid_cputime/remove_uid_range.

Change-Id: I1df677ec10c985ed0001ea8db6f94e84f6598115
Signed-off-by: zhang sanshan <sanshan.zhang@nxp.com>

--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -67,6 +67,7 @@ CONFIG_PM_DEBUG=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_UID_SYS_STATS=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
