--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -415,6 +415,7 @@ CONFIG_FB_MXC_MIPI_DSI_NORTHWEST=y
 CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
 CONFIG_FB_MX8_HDMI=y
 CONFIG_FB_MXC_ADV7535=y
+# CONFIG_FHANDLE is not set
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
