MA-10254 [Android_8QM_ARM2] Log: Console print EVENT_LOG_BUG frequently and hardly to find the valuable logs when connect Wifi module
Remove SHOW_LOGTRACE flag from bcmdhd_1363 Makefile to reduce
bcmdhd_1363 event log.

Change-Id: I9194d55c70b07775cf27340df218b95b81baee7b
Signed-off-by: Tian Yang<yang.tian@nxp.com>

--- a/drivers/net/wireless/bcmdhd_1363/Makefile
+++ b/drivers/net/wireless/bcmdhd_1363/Makefile
@@ -10,7 +10,7 @@ DHDCFLAGS += -Wall -Wstrict-prototypes -Dlinux -DLINUX -DBCMDRIVER            \
 	-DEMBEDDED_PLATFORM -DPNO_SUPPORT                                     \
 	-DDHD_DONOT_FORWARD_BCMEVENT_AS_NETWORK_PKT                           \
 	-DCUSTOMER_HW2 -DGET_CUSTOM_MAC_ENABLE			              \
-	-DSHOW_LOGTRACE -DSEC_ENHANCEMENT
+	-DSEC_ENHANCEMENT
 
 # ARP offload feature
 #DHDCFLAGS += -DARP_OFFLOAD_SUPPORT
