MA-10160 [VTS] WIFI module: 41 failed cases on arm2_8qm
Add bcmdhd_1363 wl_cgfvendor.c compile macro to support
wifi hal command.

Change-Id: I0411e1d2f69d707d3b04b4a6849c81aa06cd99f6
Signed-off-by: Tian Yang <yang.tian@nxp.com>

--- a/drivers/net/wireless/bcmdhd_1363/Makefile
+++ b/drivers/net/wireless/bcmdhd_1363/Makefile
@@ -85,7 +85,7 @@ DHDCFLAGS += -DCUSTOM_PNO_EVENT_LOCK_xTIME=10
 DHDCFLAGS += -DMIRACAST_AMPDU_SIZE=8
 
 # Gscan suppport
-#DHDCFLAGS += -DGSCAN_SUPPORT
+DHDCFLAGS += -DGSCAN_SUPPORT
 
 # Early suspend
 DHDCFLAGS += -DDHD_USE_EARLYSUSPEND
@@ -265,8 +265,8 @@ DHDOFILES := dhd_pno.o dhd_common.o dhd_ip.o dhd_custom_gpio.o \
 #DHDOFILES += dhd_rtt.o bcmxtlv.o bcm_app_utils.o
 
 # Vendor Extension support
-#DHDCFLAGS += -DWL_VENDOR_EXT_SUPPORT
-#DHDOFILES += wl_cfgvendor.o
+DHDCFLAGS += -DWL_VENDOR_EXT_SUPPORT
+DHDOFILES += wl_cfgvendor.o
 
 # Bandsteer support
 #DHDCFLAGS += -DDHD_BANDSTEER
