MA-10445 [Android] update android configure
update configure according linux BSP and google kernel.

Change-Id: Id0078fa723e85ce099e0cdbe75c98e8a3f393715
Signed-off-by: zhang sanshan <sanshan.zhang@nxp.com>

--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -12,6 +12,7 @@ CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHED=y
+CONFIG_CGROUP_BPF=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_KALLSYMS_ALL=y
@@ -305,6 +306,7 @@ CONFIG_SPI_IMX=y
 CONFIG_SPI_FSL_LPSPI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_IMX_RPMSG=y
 CONFIG_GPIO_MAX732X=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_74X164=y
