--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -55,6 +55,7 @@ CONFIG_KEXEC=y
 CONFIG_XEN=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
+CONFIG_CGROUP_BPF=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
@@ -176,6 +177,7 @@ CONFIG_IP6_NF_IPTABLES=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_RAW=y
 CONFIG_IP6_NF_NAT=y
 CONFIG_IP6_NF_TARGET_MASQUERADE=y
@@ -298,10 +300,15 @@ CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_PLUSB=y
 CONFIG_USB_NET_MCS7830=y
+CONFIG_ATH10K=y
+CONFIG_ATH10K_PCI=y
+CONFIG_ATH10K_AHB=y
+CONFIG_ATH10K_DEBUGFS=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/bcm/1CX_BCM4356/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/bcm/1CX_BCM4356/bcmdhd.1CX.cal"
 CONFIG_BCMDHD_1363=y
 CONFIG_BCMDHD_PCIE=y
+CONFIG_RTL_CARDS=y
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_EVDEV=y
@@ -401,11 +408,11 @@ CONFIG_DRM_NOUVEAU=y
 CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_ITE_IT6263=y
-CONFIG_DRM_IMX=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
 CONFIG_DRM_IMX_HDMI=y
+CONFIG_DRM_IMX_HDP=y
 CONFIG_DRM_HISI_KIRIN=y
 CONFIG_FB_IMX64=y
 CONFIG_FB_IMX64_DEBUG=y
@@ -532,7 +539,6 @@ CONFIG_USB_CONFIGFS_ECM_SUBSET=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_EEM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
-CONFIG_FSL_UTP=y
 CONFIG_USB_CONFIGFS_F_LB_SS=y
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_MTP=y
