MA-10123-1 add fence function to dcss fb drvier.
Add CONFIG_SW_SYNC config.

Change-Id: Ic6f6bd8c618ffc908af095687aa911d4f2608325
Signed-off-by: ivan.liu <xiaowen.liu@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -580,6 +580,7 @@ CONFIG_MXS_DMA=y
 CONFIG_PL330_DMA=y
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
+CONFIG_SW_SYNC=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
