MA-10123-3 add fence function to dcss fb drvier.
Add drivers/dma-buf path to build.

Change-Id: I3a1093f566066254ac078317e84a30b20035ba8f
Signed-off-by: ivan.liu <xiaowen.liu@nxp.com>

--- a/drivers/video/fbdev/mxc/Makefile
+++ b/drivers/video/fbdev/mxc/Makefile
@@ -1,3 +1,4 @@
+ccflags-$(CONFIG_FB_DCSS) += -I$(srctree)/drivers/dma-buf
 obj-$(CONFIG_FB_MXC_MIPI_DSI)			+= mipi_dsi.o
 obj-$(CONFIG_FB_MXC_MIPI_DSI_SAMSUNG)           += mipi_dsi_samsung.o
 obj-$(CONFIG_FB_MXC_MIPI_DSI_NORTHWEST)         += mipi_dsi_northwest.o
