--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -1,4 +1,5 @@
 CONFIG_POSIX_MQUEUE=y
+# CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -55,7 +56,6 @@ CONFIG_KEXEC=y
 CONFIG_XEN=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
-CONFIG_CGROUP_BPF=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
@@ -72,8 +72,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_ARM_BIG_LITTLE_CPUFREQ=y
 CONFIG_ARM_IMX8_CPUFREQ=y
@@ -82,7 +82,6 @@ CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
-CONFIG_UID_SYS_STATS=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
@@ -174,10 +173,10 @@ CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
-CONFIG_IP6_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_RAW=y
 CONFIG_IP6_NF_NAT=y
 CONFIG_IP6_NF_TARGET_MASQUERADE=y
@@ -243,6 +242,7 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_SENSORS_FXOS8700=y
 CONFIG_SENSORS_FXAS2100X=y
 CONFIG_SRAM=y
+CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
@@ -308,7 +308,6 @@ CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/bcm/1CX_BCM4356/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/bcm/1CX_BCM4356/bcmdhd.1CX.cal"
 CONFIG_BCMDHD_1363=y
 CONFIG_BCMDHD_PCIE=y
-CONFIG_RTL_CARDS=y
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_EVDEV=y
@@ -351,6 +350,7 @@ CONFIG_VIRTIO_CONSOLE=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
+CONFIG_I2C_IMX=y
 CONFIG_I2C_IMX_LPI2C=y
 CONFIG_I2C_CROS_EC_TUNNEL=y
 CONFIG_I2C_SLAVE=y
@@ -422,7 +422,6 @@ CONFIG_FB_MXC_MIPI_DSI_NORTHWEST=y
 CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
 CONFIG_FB_MX8_HDMI=y
 CONFIG_FB_MXC_ADV7535=y
-# CONFIG_FHANDLE is not set
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
@@ -441,6 +440,7 @@ CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_WM8962=y
 CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
+CONFIG_SND_SOC_IMX_AMIX=y
 CONFIG_SND_SOC_IMX_CDNHDMI=y
 CONFIG_SND_SOC_AK4613=y
 CONFIG_HIDRAW=y
@@ -558,7 +558,6 @@ CONFIG_MMC_SDHCI_ACPI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_MMC_SPI=y
-CONFIG_MXC_GPU_VIV=y
 CONFIG_GPU_LOW_MEMORY_KILLER=y
 CONFIG_MXC_MLB150=y
 CONFIG_LEDS_GPIO=y
