MA-10493-5 [Android] enable Loadable kernel modules in android
Module versioning support through CONFIG_MODVERSIONS.
we could not insmod the .ko if it's not build out in the same source code.

Change-Id: I8adda035e231fa8c34c644faf1126235654eb2e9
Signed-off-by: zhang sanshan <sanshan.zhang@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -20,6 +20,7 @@ CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
+CONFIG_MODVERSIONS=y
 CONFIG_BLK_CGROUP=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_HUGETLB=y
