MA-10534 Enable1CQ and disable 1CX wifi on mscale
Build 1CQ ath driver in ko mode for mscale,
also build broadcom 1CX bcmdhd1363 into ko mode on mscale.

Change-Id: Ifcb94bb672343238f1c2ed4b95ebf3786e6886d2
Signed-off-by: Tian Yang <yang.tian@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -301,8 +301,8 @@ CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_PLUSB=y
 CONFIG_USB_NET_MCS7830=y
-CONFIG_ATH10K=y
-CONFIG_ATH10K_PCI=y
+CONFIG_ATH10K=m
+CONFIG_ATH10K_PCI=m
 CONFIG_ATH10K_AHB=y
 CONFIG_ATH10K_DEBUGFS=y
 CONFIG_BCMDHD_1363=m
