MA-10537-2 build broadcom wifi for imx8 into module mode
build broadcom wifi for imx8 into module mode

Change-Id: Idc4a2b0d0bae18a76c1fb270a02dbaeff3398908
Signed-off-by: Tian Yang <yang.tian@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -305,7 +305,7 @@ CONFIG_ATH10K=y
 CONFIG_ATH10K_PCI=y
 CONFIG_ATH10K_AHB=y
 CONFIG_ATH10K_DEBUGFS=y
-CONFIG_BCMDHD_1363=y
+CONFIG_BCMDHD_1363=m
 CONFIG_BCMDHD_PCIE=y
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_INPUT_POLLDEV=y
