MA-10606[Android] android_defconfig update after merge with imx_4.9.y
Update the android_defconfig according to the change of the defconfig after
merge with imx_4.9.y branch

Change-Id: I31bc0886aa352177331844e36e62012d9f0c2f79
Signed-off-by: Zhang Bo <bo.zhang@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -383,6 +383,7 @@ CONFIG_IMX_SC_THERMAL=y
 CONFIG_DEVICE_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_IMX2_WDT=y
+CONFIG_IMX8_WDT=y
 CONFIG_MFD_CROS_EC=y
 CONFIG_MFD_CROS_EC_I2C=y
 CONFIG_MFD_MAX77620=y
@@ -402,6 +403,7 @@ CONFIG_VIDEO_MX8_CAPTURE=y
 CONFIG_GMSL_MAX9286=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_IMX_DPU_CORE=y
+CONFIG_IMX_DCSS_CORE=y
 CONFIG_DRM=y
 CONFIG_DRM_NOUVEAU=y
 CONFIG_DRM_PANEL_SIMPLE=y
@@ -411,6 +413,7 @@ CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
 CONFIG_DRM_IMX_HDMI=y
+CONFIG_DRM_IMX_NWL_DSI=y
 CONFIG_DRM_IMX_HDP=y
 CONFIG_DRM_HISI_KIRIN=y
 CONFIG_FB_IMX64=y
@@ -651,6 +654,7 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
