--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -252,6 +252,7 @@ CONFIG_SCSI_HISI_SAS=y
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
+CONFIG_AHCI_IMX=y
 CONFIG_AHCI_CEVA=y
 CONFIG_AHCI_XGENE=y
 CONFIG_AHCI_QORIQ=y
@@ -312,6 +313,7 @@ CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_KEYBOARD_IMX_SC_PWRKEY=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -407,6 +409,7 @@ CONFIG_IMX_DCSS_CORE=y
 CONFIG_DRM=y
 CONFIG_DRM_NOUVEAU=y
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
@@ -415,6 +418,7 @@ CONFIG_DRM_IMX_LDB=y
 CONFIG_DRM_IMX_HDMI=y
 CONFIG_DRM_IMX_NWL_DSI=y
 CONFIG_DRM_IMX_HDP=y
+CONFIG_IMX_HDP_CEC=y
 CONFIG_DRM_HISI_KIRIN=y
 CONFIG_FB_IMX64=y
 CONFIG_FB_IMX64_DEBUG=y
@@ -587,6 +591,8 @@ CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_STAGING=y
+CONFIG_STAGING_MEDIA=y
+CONFIG_MEDIA_CEC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
@@ -597,6 +603,7 @@ CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 CONFIG_COMMON_CLK_S2MPS11=y
 CONFIG_CLK_QORIQ=y
+CONFIG_CLKSRC_IMX_SYS_CNT=y
 CONFIG_MAILBOX=y
 CONFIG_ARM_MHU=y
 CONFIG_ARM_SMMU=y
