--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -69,6 +69,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_DEBUG=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -401,8 +402,12 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_MXC_CAPTURE=y
 CONFIG_VIDEO_MX8_CAPTURE=y
 CONFIG_GMSL_MAX9286=y
+CONFIG_VIDEO_MXC_CSI_CAMERA=y
+CONFIG_MXC_MIPI_CSI=y
+CONFIG_MXC_CAMERA_OV5640_MIPI_V2=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_IMX_DPU_CORE=y
 CONFIG_IMX_DCSS_CORE=y
@@ -420,14 +425,12 @@ CONFIG_DRM_IMX_NWL_DSI=y
 CONFIG_DRM_IMX_HDP=y
 CONFIG_IMX_HDP_CEC=y
 CONFIG_DRM_HISI_KIRIN=y
+CONFIG_DRM_MXSFB=y
 CONFIG_FB_IMX64=y
 CONFIG_FB_IMX64_DEBUG=y
 CONFIG_FB_ARMCLCD=y
-CONFIG_FB_MXS=y
-CONFIG_FB_MXC_MIPI_DSI_NORTHWEST=y
-CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
+CONFIG_FB_MXC_DISP_FRAMEWORK=y
 CONFIG_FB_MX8_HDMI=y
-CONFIG_FB_MXC_ADV7535=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
