MA-10779 [Android] support 'mount -t nfs' for android
support below commands:
busybox mount -t nfs -o rw,nolock,rsize=1024,wsize=1024 ip:/share_home local_dir

Change-Id: Iddbefa959c051a2a9d4b6b4ccdadc9eb914bb88e
Signed-off-by: zhang sanshan <sanshan.zhang@nxp.com>

--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -58,6 +58,7 @@ CONFIG_ARM_IMX7ULP_CPUFREQ=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
+CONFIG_NFS_FS=y
 CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_PM_AUTOSLEEP=y
