--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -2,6 +2,7 @@ CONFIG_POSIX_MQUEUE=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
+CONFIG_NFS_FS=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
