ARM: dts: imx6qdl-sabrelite: add new aliases
Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/arch/arm/boot/dts/imx6q-sabrelite.dts
+++ b/arch/arm/boot/dts/imx6q-sabrelite.dts
@@ -26,15 +26,15 @@
 	ipu_id = <1>;
 };
 
-&lvds_display {
+&fb_lvds {
 	status = "okay";
 };
 
-&hdmi_display {
+&fb_hdmi {
 	status = "okay";
 };
 
-&lcd_display {
+&fb_lcd {
 	status = "okay";
 };
 
