--- a/arch/arm/boot/dts/imx6qdl-sabrelite.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabrelite.dtsi
@@ -14,14 +14,25 @@
 
 / {
 	aliases {
-                mxcfb0 = &hdmi_display;
-                mxcfb1 = &lvds_display;
-                mxcfb2 = &lcd_display;
-		hdmi_display = &hdmi_display;
-		lvds_display = &lvds_display;
-		lcd_display = &lcd_display;
+		backlight_lcd = &backlight_lcd;
+		backlight_lvds = &backlight_lvds;
+		fb_hdmi = &fb_hdmi;
+		fb_lcd = &fb_lcd;
+		fb_lvds = &fb_lvds;
+		lcd = &lcd;
+		ldb = &ldb;
+		mxcfb0 = &fb_hdmi;
+		mxcfb1 = &fb_lvds;
+		mxcfb2 = &fb_lcd;
+		pwm_lcd = &pwm1;
+		pwm_lvds = &pwm4;
+		t_lvds = &t_lvds;
+		/* obsolete below */
+		hdmi_display = &fb_hdmi;
+		lvds_display = &fb_lvds;
+		lcd_display = &fb_lcd;
 		hannstar = &hannstar ;
-		lg1280x800 = &lg1280x800;
+		lg1280x800 = &t_lvds;
 		okaya1024x600 = &okaya1024x600;
 	};
 
@@ -134,7 +145,7 @@
 		hdmi-controller = <&hdmi_audio>;
 	};
 
-	lvds_display: fb@0 {
+	fb_lvds: fb@0 {
 		compatible = "fsl,mxc_sdc_fb";
 		disp_dev = "ldb";
 		interface_pix_fmt = "RGB666";
@@ -144,7 +155,7 @@
 		status = "disabled";
 	};
 
-	lcd_display: fb@1 {
+	fb_lcd: fb@1 {
 		compatible = "fsl,mxc_sdc_fb";
 		disp_dev = "lcd";
 		interface_pix_fmt = "RGB666";
@@ -154,7 +165,7 @@
 		status = "disabled";
 	};
 
-	hdmi_display: fb@2 {
+	fb_hdmi: fb@2 {
 		compatible = "fsl,mxc_sdc_fb";
 		disp_dev = "hdmi";
 		interface_pix_fmt = "RGB24";
@@ -165,7 +176,7 @@
 		status = "disabled";
 	};
 
-	lcd0: lcd@0 {
+	lcd: lcd@0 {
 		compatible = "fsl,lcd";
 		ipu_id = <0>;
 		disp_id = <0>;
@@ -182,7 +193,7 @@
 		default-brightness-level = <7>;
 	};
 
-	backlight_lvds {
+	backlight_lvds: backlight_lvds {
 		compatible = "pwm-backlight";
 		pwms = <&pwm4 0 5000000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
@@ -574,7 +585,8 @@
 		primary;
 
 		display-timings {
-			lg1280x800: lp101wx1 {
+			t_lvds: t_lvds_default {
+				/* lg1280x800 values may be changed in bootscript */
 				clock-frequency = <72000000>;
 				hactive = <1280>;
 				vactive = <800>;
