MA-10900 [Android] align kernel config with aosp
merge AOSP 4.9 branch which upgrade to 4.9.68.
Align aosp kernel config.

Change-Id: Ieeb516752ee6fbe2949b9be0bc6c80f01a029f8e
Signed-off-by: zhang sanshan <sanshan.zhang@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -54,6 +54,7 @@ CONFIG_KSM=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_CMA=y
 CONFIG_SECCOMP=y
+CONFIG_SECCOMP_FILTER=y
 CONFIG_KEXEC=y
 CONFIG_XEN=y
 CONFIG_ARMV8_DEPRECATED=y
@@ -185,6 +186,7 @@ CONFIG_IP6_NF_NAT=y
 CONFIG_IP6_NF_TARGET_MASQUERADE=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_BPF_SYSCALL=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
@@ -629,6 +631,7 @@ CONFIG_ACPI=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_SDCARD_FS=y
 CONFIG_FANOTIFY=y
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_QUOTA=y
