audio: auge: init spdif_b when bootup and add channel status
PD#165171: audio: auge: init spdif_b when bootup and add channel status

Change-Id: I001d74a0f21fb3f02edf741bd3b87d45dfddcd5f
Signed-off-by: Xing Wang <xing.wang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/g12a_s905d2_u200.dts
+++ b/arch/arm64/boot/dts/amlogic/g12a_s905d2_u200.dts
@@ -587,6 +587,7 @@
 
 		aml-audio-card,dai-link@4 {
 			mclk-fs = <128>;
+			//continuous-clock;
 			/* suffix-name, sync with android audio hal
 			 * what's the dai link used for
 			 */
@@ -602,6 +603,7 @@
 		/* spdif_b to hdmi, only playback */
 		aml-audio-card,dai-link@5 {
 			mclk-fs = <128>;
+			continuous-clock;
 			/* suffix-name, sync with android audio hal
 			 * what's the dai link used for
 			 */
