--- a/arch/arm64/boot/dts/amlogic/g12a_s905d2_u220.dts
+++ b/arch/arm64/boot/dts/amlogic/g12a_s905d2_u220.dts
@@ -589,6 +589,7 @@
 		/* spdif_b to hdmi, only playback */
 		aml-audio-card,dai-link@5 {
 			mclk-fs = <128>;
+			continuous-clock;
 			/* suffix-name, sync with android audio hal
 			 * what's the dai link used for
 			 */
