--- a/arch/arm64/boot/dts/amlogic/g12a_s905y2_u221.dts
+++ b/arch/arm64/boot/dts/amlogic/g12a_s905y2_u221.dts
@@ -145,7 +145,7 @@
 	cvbsout {
 		compatible = "amlogic, cvbsout-g12a";
 		dev_name = "cvbsout";
-		status = "okay";
+		status = "disabled";
 		clocks = <&clkc CLKID_VCLK2_ENCI
 			&clkc CLKID_VCLK2_VENCI0
 			&clkc CLKID_VCLK2_VENCI1
