lcd: local dimming: add unifykey support [2/2]
PD#166418: ldim: add unifykey support

Change-Id: I0cb7629ed9824c50d5f85b7ec34e26c165a60a1e
Signed-off-by: Weiming Liu <weiming.liu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesontxlx_r311-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontxlx_r311-panel.dtsi
@@ -727,7 +727,7 @@
 				50>;/*duty(%)*/
 			spi_bus_num = <0>;
 			spi_chip_select = <0>;
-			spi_max_frequency = <400000>; /* unit: hz */
+			spi_max_frequency = <1000000>; /* unit: hz */
 			spi_mode = <0>; /* mode: 0, 1, 2, 3 */
 			spi_cs_delay = <10  /* hold_high_delay */
 				100>; /* clk_cs_delay (unit: us) */
