defendkey: support secure upgrade check
PD#164929: G12A need to support defendkey

Change-Id: I3c805c4dda03a39156fb91b53cc55ee8930f9e03
Signed-off-by: Zhongfu Luo <zhongfu.luo@amlogic.com>

--- a/drivers/amlogic/Kconfig
+++ b/drivers/amlogic/Kconfig
@@ -129,5 +129,8 @@ source "drivers/amlogic/irqchip/Kconfig"
 source "drivers/amlogic/atv_demod/Kconfig"
 
 source "drivers/amlogic/debug/Kconfig"
+
+source "drivers/amlogic/defendkey/Kconfig"
+
 endmenu
 endif
