--- a/drivers/amlogic/Makefile
+++ b/drivers/amlogic/Makefile
@@ -120,3 +120,5 @@ obj-$(CONFIG_AMLOGIC_GPIO_IRQ) += irqchip/
 obj-$(CONFIG_AMLOGIC_ATV_DEMOD) += atv_demod/
 
 obj-$(CONFIG_AMLOGIC_DEBUG) += debug/
+
+obj-$(CONFIG_AMLOGIC_DEFENDKEY) += defendkey/
