spicc: g12a: spicc0 pins_c debug
PD#166556: spicc: g12a: spicc0 pins_c debug

Change-Id: I4f5f118410617cc3de8a1132100a1f7e21bc9f66
Signed-off-by: Sunny Luo <sunny.luo@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesong12a.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesong12a.dtsi
@@ -2292,6 +2292,16 @@
 		};
 	};
 
+	spicc0_pins_c: spicc0_pins_c {
+		mux {
+			groups = "spi0_mosi_c",
+					"spi0_miso_c",
+					"spi0_ss0_c",
+					"spi0_clk_c";
+			function = "spi0";
+		};
+	};
+
 	spicc1_pins: spicc1_pins {
 		mux {
 			groups = "spi1_mosi",
