--- a/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
+++ b/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
@@ -1262,10 +1262,11 @@
 		compatible = "amlogic, dvb";
 		dev_name = "dvb";
 		status = "okay";
-		demod = "internal";
-		tuner0 = "si2151_tuner";
-		tuner0_i2c_adap_id = <&i2c1>;
-		tuner0_i2c_addr = <0x60>;
+		fe0_mode = "internal";
+		fe0_tuner = "si2151_tuner";
+		fe0_i2c_adap_id = <&i2c1>;
+		fe0_tuner_i2c_addr = <0x60>;
+
 		/*"parallel","serial","disable"*/
 		ts2 = "parallel";
 		ts2_control = <0>;
