dts: enable picdec [1/1]
PD#166830: dts: enable picdec

or we can't play 4K picture

Change-Id: I7109cd421608a82fb5cd05617bf4065d4897a430
Signed-off-by: Lei Qian <lei.qian@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txlx_t962x_r311_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/txlx_t962x_r311_1g.dts
@@ -364,7 +364,7 @@
 		compatible = "amlogic, picdec";
 		memory-region = <&picdec_cma_reserved>;
 		dev_name = "picdec";
-		status = "disabled";
+		status = "okay";
 	};
 
 	ppmgr {
