hdr: add osd lut table for nts test
PD#164627: hdr: add osd lut table for nts test

1. debug fs : /sys/kernel/debug/hdr/cfg_en_osd_100
	1: enable new osd lut table (for nts test)
	0: use old osd lut table
2. dts: amlvecm:cfg_en_osd_100
	1: enable new osd lut table (for nts test)
	0/not define: use old osd lut table

Change-Id: If3c51eaba58f7d83188b8920ad7dca78d3b38c19
Signed-off-by: Jihong Sui <jihong.sui@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/gxl_p231_2g_buildroot.dts
+++ b/arch/arm64/boot/dts/amlogic/gxl_p231_2g_buildroot.dts
@@ -1070,6 +1070,8 @@
 		gamma_en = <0>;/*1:enabel ;0:disable*/
 		wb_en = <0>;/*1:enabel ;0:disable*/
 		cm_en = <0>;/*1:enabel ;0:disable*/
+		/*1:enabel osd lut 100 table;0:disable*/
+		cfg_en_osd_100 = <1>;
 	};
 
 	unifykey{
