frame_sync: optimize AV SYNC procession.
PD#165368: frame_sync: optimize AV SYNC procession.

Change-Id: Ib9f11c059b9c2985878f83f428cebc5f70bdd0fd
Signed-off-by: manhao liang <manhao.liang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/gxl_p212_1g_buildroot.dts
+++ b/arch/arm64/boot/dts/amlogic/gxl_p212_1g_buildroot.dts
@@ -684,12 +684,14 @@
 		clocks = <&clkc CLKID_DOS_PARSER
 			&clkc CLKID_DEMUX
 			&clkc CLKID_DOS
+			&clkc CLKID_CLK81
 			&clkc CLKID_VDEC_MUX
 			&clkc CLKID_HCODEC_MUX
 			&clkc CLKID_HEVC_MUX>;
 		clock-names = "parser_top",
 			"demux",
 			"vdec",
+			"clk_81",
 			"clk_vdec_mux",
 			"clk_hcodec_mux",
 			"clk_hevc_mux";
